@@ -555,6 +555,12 @@ though the
 .I \-dv
 option (above) may be used to override this.
 .TP
+.BR \-R
+Boolean switch to control random sampling.
+When "off", a low-discrepancy sequence is used, which reduces
+variance but can result in a brushed appearance in specular highlights.
+When "on", pure Monte Carlo sampling is used in all calculations.
+.TP
 .BI -lr \ N
 Limit reflections to a maximum of
 .I N.
