@@ -288,6 +288,7 @@ medium sampling (ms),
 pixel sample (ps),
 pixel threshold (pt),
 back face visibility (bv),
+random sampling (R),
 specular jitter (sj), and
 specular threshold (st).
 Once a variable has been changed, the "new" command can be used
