@@ -36,6 +36,9 @@ getrenderopt(		/* get next render option */
 		return(-1);
 					/* check if it's one we know */
 	switch (av[0][1]) {
+	case 'R':				/* random sampling */
+		bool(2,rand_samp);
+		return(0);
 	case 'b':				/* back face vis. */
 		if (av[0][2] == 'v') {
 			bool(3,backvis);
@@ -217,6 +220,8 @@ print_rdefaults(void)		/* print default render values to stdout */
 {
 	printf(do_irrad ? "-i+\t\t\t\t# irradiance calculation on\n" :
 			"-i-\t\t\t\t# irradiance calculation off\n");
+	printf(rand_samp ? "-R+\t\t\t\t# random sampling on\n" :
+			"-R-\t\t\t\t# random sampling off\n");
 	printf(backvis ? "-bv+\t\t\t\t# back face visibility on\n" :
 			"-bv-\t\t\t\t# back face visibility off\n");
 	printf("-dt %f\t\t\t# direct threshold\n", shadthresh);
